# nbody

./: .gitignore  CMakeLists.txt  README.md  benchmark.h  body.h  gpu_nbody.cu  graphics.h  main.cpp  main_old.cpp  nbody_cpu.h  nbody_cuda.cu  nbody_cuda.cuh  nbody_cuda.h  octree.h  structures.h  timer.h
benchmarks/: bench_utils.py  plot_roof.py  plot_runtime_vs_n.py  run_benchmark.py  vis.py
profiling/: profile.txt  roof.py
